--- a/.github/workflows/title-format.yml
+++ b/.github/workflows/title-format.yml
@@ -1,20 +1,20 @@
-name: "Lint PR Title"
-
+name: PR Title Lint
 on:
   pull_request_target:
     types:
       - opened
       - edited
       - synchronize
-
 permissions:
-  pull-requests: read
-
+  contents: read
 jobs:
-  main:
-    name: Validate PR title
+  lint-title:
+    name: Lint PR Title
+    permissions:
+      pull-requests: read
+      statuses: write
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v5
+      - uses: amannn/action-semantic-pull-request@v5.4.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
