--- a/.github/workflows/title-format.yml
+++ b/.github/workflows/title-format.yml
@@ -1,20 +1,20 @@
-name: PR Title Lint
+name: "Lint PR Title"
+
 on:
   pull_request_target:
     types:
       - opened
       - edited
       - synchronize
+
 permissions:
-  contents: read
+  pull-requests: read
+
 jobs:
-  lint-title:
-    name: Lint PR Title
-    permissions:
-      pull-requests: read
-      statuses: write
+  main:
+    name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v5.4.0
+      - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
