--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,6 @@ jobs:
         with:
           go-version: '1.21'
       - uses: actions/checkout@v4
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6.0.1
-        with:
-          version: v1.57.2
+      - name: run linting
+        run: |
+          make lint
