--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,7 +1,7 @@
 # This workflow will ensure the project is tidy, buildable and all tests pass
 # on every push to the main branch and on every pull request.
 #
-name: build
+name: Build and Test
 
 on:
   push:
