--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,11 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.21'
+      
       - uses: actions/checkout@v4
-      - name: run linting
-        run: |
-          make lint
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6.0.1
+        with:
+          version: v1.57.2
+          args: --timeout 15m
