Add checksum & force draft

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,9 +10,7 @@ version: 1
 
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
 
 builds:
@@ -44,3 +42,11 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+
+checksum:
+  name_template: SHA256SUMS-{{.Version}}.txt
+  algorithm: sha256
+
+release:
+  prerelease: auto
+  draft: true
