--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: File a bug report.
-title: "bug: "
+title: "[Bug]: "
 labels: ["bug", "triage"]
 body:
   - type: markdown
@@ -12,6 +12,13 @@ body:
     attributes:
       label: What happened and what did you expect to happen?
       placeholder: Tell us what you see!
+    validations:
+      required: true
+  - type: textarea
+    id: reproduce
+    attributes:
+      label: Describe how to reproduce the bug
+      placeholder: Step by step method to recreate the issue.
     validations:
       required: true
   - type: input
