--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -10,24 +10,17 @@ body:
       placeholder: What's your end goal?
     validations:
       required: true
-  - type: input
-    id: version
+  - type: textarea
+    id: valueadd
     attributes:
-      label: version
-      description: What version of the software are you using?
+      label: Use Cases and Audiences
+      description: What new possibilities does this feature enable, and what types of users will find it helpful?
+      placeholder: Who is the audience and what new applications would this feature enable?
   - type: checkboxes
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com). 
+      description: By submitting this issue, you agree to follow our [Code of Conduct](../../../CODE_OF_CONDUCT.md). 
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
