--- a/.github/workflows/interchain-tests.yml
+++ b/.github/workflows/interchain-tests.yml
@@ -1,8 +1,8 @@
-# This workflow is designed to run interchain e2e tests on the project.
+# This workflow is designed to run e2e tests that make use of interchaintest.
 # Please modify the below configurations to ensure the workflow works
 # correctly for your project.
 #
-name: "Interchain E2E Tests"
+name: "e2e Interchaintests"
 
 on:
     push:
@@ -20,12 +20,12 @@ jobs:
             fail-fast: false
         steps:
             - name: Set up Go 1.21
-              uses: actions/setup-go@v3
+              uses: actions/setup-go@v5
               with:
                 go-version: 1.21
             
             - name: checkout chain
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: run test
               run: make ${{ matrix.test }}
