--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ on:
 permissions:
   contents: write
 
+env:
+  GO_VERSION: 1.21
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -21,7 +24,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.21
+          go-version: ${{ env.GO_VERSION }}
       
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
