--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,6 +20,7 @@ concurrency:
 
 env:
   GO_VERSION: 1.21
+  READ_PAT: ${{ secrets.ORG_READ_PAT }}
 
 jobs:
 
@@ -29,11 +30,17 @@ jobs:
       name: tidy
       steps:
       - uses: actions/checkout@v4
+      
       - name: Setup go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - run: |
+
+      - name: Configure git to use PAT for reading private repositories
+        run: git config --global url."https://${{ env.READ_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+      
+      - name: Go Mod Tidy
+        run: |
           go mod tidy
           CHANGES_IN_REPO=$(git status --porcelain)
           if [[ -n "$CHANGES_IN_REPO" ]]; then
@@ -48,11 +55,17 @@ jobs:
     name: build
     steps:
       - uses: actions/checkout@v4
+      
       - name: Setup go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - run: go build ./...
+
+      - name: Configure git to use PAT for reading private repositories
+        run: git config --global url."https://${{ env.READ_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+
+      - name: Go Build
+        run: go build ./...
 
   # Run all standard, go tests
   test:
@@ -63,7 +76,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+      
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Test
+
+      - name: Configure git to use PAT for reading private repositories
+        run: git config --global url."https://${{ env.READ_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+      
+      - name: Go Test
         run: go test ./...
