--- a/.github/workflows/interchain-tests.yml
+++ b/.github/workflows/interchain-tests.yml
@@ -9,23 +9,30 @@ on:
         branches: [ main ]
     pull_request:
 
+env:
+  GO_VERSION: 1.21
+  READ_PAT: ${{ secrets.ORG_READ_PAT }}
+
 jobs:
     interchain-tests:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                # list names of `make` commands to run e2e tests on
+                # list names of `make` targets to run e2e tests on
                 test:
                   - ictest-cosmos-chain
             fail-fast: false
         steps:
-            - name: Set up Go 1.21
+            - name: Set up Go
               uses: actions/setup-go@v5
               with:
-                go-version: 1.21
+                go-version: ${{ env.GO_VERSION }}
             
             - name: checkout chain
               uses: actions/checkout@v4
+
+            - name: Configure git to use PAT for reading private repositories
+              run: git config --global url."https://${{ env.READ_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
             - name: run test
               run: make ${{ matrix.test }}
