--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,6 +10,7 @@ linters:
   - asciicheck
   - bidichk
   - bodyclose
+  - copyloopvar
   - decorder
   - dupl
   - dupword
@@ -17,7 +18,6 @@ linters:
   - errchkjson
   - errname
   - exhaustive
-  - exportloopref
   - forbidigo
   - gci
   - goconst
